# lib-iq

./: .gitattributes  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  VERSION.txt  build.sh  build_auto.sh  execute_prova.sh  libiq_installer.sh  main.cpp  prerequisites.txt  prova.py  pyproject.toml  remove_build.sh  setup.py  useful_things.txt
.github/workflows/: mirror.yml  pytest.yml  tag-and-release.yml
RFDataFactory/SigMF/: sigmf_converter.py
docs/: Dockerfile  Dockerfile_manylinux  build_docker.sh  test_libiq.py
docs/sample_data/: combined_output.csv  test_model.keras
examples/: classifier.py  converter.py  libiq.py  prova.py  read_metadata.py  scatterplot.py  spectrogram.py  test.py  test_classifier.py  test_converter.py  test_iqclustering.py  test_libiq.py  test_scatterplot.py  test_spectrogram.py  test_utils.py  utils.py
examples/demo/: receiver.grc  receiver_demo.grc  receiver_demo.py  rx.py  transmitter.grc  tx.py
examples/iq_samples/: 2024_01_19_20_48_32_507.mat
examples/iq_samples_mat/: uav1_6ft_burst1_001.mat
examples/iq_samples_sigmf/: uav1_6ft_burst1_001.sigmf-meta
examples/test_results/model/: best_model.keras
examples/test_results/reports/: test.html  train.html
examples/test_results/saved_models/: best_model.keras  description.txt
examples/test_results/saved_models/model2/: best_model.keras
examples/test_results/saved_models/model3/: best_model.keras
examples/test_results/saved_models/model5/: best_model.keras
examples/test_results/saved_models/model6/: best_model.keras
examples/test_results/saved_models/model7/: best_model.keras
iq_samples_mat/: uav1_6ft_burst1_001.mat
libiq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: analyzer.cpp  analyzer.h  analyzer.i  calculations.cpp  calculations.h  converter.cpp  converter.h  converter.i  from_bin_to_sigmf.cpp  from_bin_to_sigmf.h  libiq.i  libiq_wrap.cxx
src/libiq/: __init__.py  scatterplot.py  spectrogram.py
src/libiq/classifier/: cnn.py  energy_detector.py  preprocessing.py
src/libiq/converter/: mat.py  sigmf.py
src/libiq/iq_clustering/: clustering_models.py  cnn.py  preprocessing.py  signal_processing.py
src/libiq/plotter/: accuracy_curve.py  confusion_matrix.py  loss_curve.py  scatterplot.py  spectrogram.py  waterfall.py
src/libiq/utils/: constants.py  create_dataset.py  logger.py
src/libiq_swig/: analyzer.cpp  analyzer.h  converter.cpp  converter.h  libiq_wrapped.i
src_python/: scatterplot.py  spectrogram.py
