[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "libiq"
version = "0.1.0"
description = "LibIQ is a unified Python library that provides tools for analyzing and manipulating IQ samples, along with time-series-based classification functionalities."
authors = [
  { name = "Filippo Olimpieri", email = "filippo.olimpieri@gmail.com" },
  { name = "Noemi Giustini", email = "noemi.giustini.2001@gmail.com"},
  { name = "Andrea Lacava", email = "thecave003@gmail.com"},
]
readme = "README.md"
dynamic = ["version"]
license = "Apache-2.0"
license-files = ["LICENSE"]

requires-python = ">=3.8"

dependencies = [
  "cython",
  "scikit-learn",
  "scipy",
  "h5py",
  "tensorflow",
  "tslearn",
  "yellowbrick",
  "pandas",
  "numpy==1.24.3",
  "pydot",
  "SciencePlots",
  "seaborn",
]

[project.optional-dependencies]
profile = [
  "ydata-profiling",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"libiq" = ["*.so"]

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>\\d+\\.\\d+\\.\\d+)"

[project.urls]
#Package = ""  #PYPI LINK
Source = "https://github.com/wineslab/lib-iq.git"
"Bug Tracker" = "https://github.com/wineslab/lib-iq/issues"